add_subdirectory(core)
add_subdirectory(raii)
add_subdirectory(templates)
add_subdirectory(stdlib)
add_subdirectory(utility)
add_subdirectory(concurrency)
add_subdirectory(coroutines)
add_subdirectory(error)

option(BUILD_MODULES "Build C++20 modules examples" OFF)
if(BUILD_MODULES)
  add_subdirectory(modules)
endif()
